# nba_elt_airflow

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  airflow.requirements.txt  airflow_local_settings.py  docker-compose.yaml  jacobs_notes.md  local.requirements.txt  meltano.yml  pyproject.toml  pytest.ini  requirements.txt
.astro/: config.yaml  test_dag_integrity_default.py
.github/: pull_request_template.md
dags/: airbyte_pipeline.py  airflow_local_settings.py  aws_batch_template.py  aws_ecs_ec2_template.py  aws_ecs_template.py  aws_lambda_trigger.py  aws_secrets_test.py  backfill_example.py  backfill_params_test.py  bash_test.py  custom_operator_dag.py  graphql_agent_test.py  http_test.py  jacob_python_test_dag.py  jacobs_test_dag.py  meltano_pipeline.py  multi_load_test.py  nba_elt_pipeline.py  nba_elt_pipeline_dag.py  nba_elt_pipeline_dag_dev.py  nba_elt_pipeline_dag_prod.py  nba_elt_pipeline_dag_qa.py  nba_pipeline.py  nba_rest_api_scrape.py  package_dependencies.py  pagerduty_v2_example.py  params_example.py  params_on_crack.py  postgres_export_chunks.py  s3_check_test.py  s3_sensor_dag.py  sftp_jacob_test.py  sftp_test.py  smtp_test.py  snowflake_build_table.py  snowflake_load_from_s3.py  snowflake_load_test.py  snowflake_merge_from_s3.py  snowflake_test.py  snowflake_unload_to_s3.py  (+8 more)
docker_ecs/: .dockerignore  Dockerfile  Makefile  Pipfile  README.md  app.py  install_packages.sh  utils.py
include/: aws_operators.md  aws_utils.py  common.py  exceptions.py  postgres_utils.py  snowflake_params.py  snowflake_utils.py  utils.py
k8s/: Dockerfile  apuntes.md
operators/: main.py
outdated/: Dockerfile  Makefile  dag_trigger.ipynb
plugins/: CustomTimetable.py  example_plugin.py
tests/: conftest.py  (+5 more)
(+58 files in other folders)
