[tool.poetry]
name = "jyablonski-nba-elt-airflow"
version = "2.2.8"
description = "Practice Apache Airflow Repo"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-airflow = "^2.8.1"
boto3 = "^1.34.23"
requests = "^2.31.0"
pandas = "^2.2.0"
apache-airflow-providers-amazon = "^8.16.0"
apache-airflow-providers-google = "^10.13.1"
apache-airflow-providers-postgres = "^5.10.0"
apache-airflow-providers-slack = "^8.5.1"
apache-airflow-providers-sftp = "^4.8.1"
apache-airflow-providers-smtp = "^1.6.0"
apache-airflow-providers-discord = "^3.5.0"
awswrangler = "^3.5.1"
moto = "^4.2.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
