[tool.poetry]
name = "jyablonski-nba-elt-airflow"
version = "2.2.8"
description = "Practice Apache Airflow Repo"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
apache-airflow-providers-amazon = "^8.29.0"
apache-airflow-providers-discord = "^3.8.0"
apache-airflow-providers-postgres = "^5.13.0"
apache-airflow-providers-slack = "^8.9.0"
apache-airflow-providers-pagerduty = "^3.8.0"
apache-airflow-providers-snowflake = "^5.7.1"
awswrangler = "^3.9.1"
moto = "^5.0.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
